--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,15 @@
 body {
   font-family: 'Segoe UI', sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-backgroundSecondary;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-scrollbarColor;
+}
